--- a/syntr-presentatie.ipynb
+++ b/syntr-presentatie.ipynb
@@ -6,12 +6,12 @@
    "source": [
     "# Genetische Algoritmes\n",
     "\n",
-    "Pricipe het process van naturrlijk selectie toepassen om een simulatie uitvoeren. "
+    "Principe: het process van natuurlijk selectie toepassen om een simulatie uit te voeren. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,11 +52,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Individual(object):\n",
+    "class Individual:\n",
     "\t'''\n",
     "\tClass representing individual in population\n",
     "\t'''\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,25 +155,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(1, '\",Xt[qn', 6),\n",
-       " (2, 'tE3R\"aX', 6),\n",
-       " (3, 'SBQvX!j', 6),\n",
-       " (4, 'J)n(Y,n', 6),\n",
-       " (5, 'kJ35m5n', 7),\n",
-       " (6, 'LppXUqP', 7),\n",
-       " (7, ' 5qmzL-', 7),\n",
-       " (8, '15R tVU', 7),\n",
-       " (9, 'obfM{ G', 7),\n",
-       " (10, 'jVH35yH', 7)]"
+       "[(1, 'NEAto-1', 6),\n",
+       " (2, 'fy3WQYV', 6),\n",
+       " (3, 'O4lJ{a}', 6),\n",
+       " (4, 'slFtXpE', 6),\n",
+       " (5, 'SOe=?S/', 6),\n",
+       " (6, ' J)=Oe!', 6),\n",
+       " (7, '?-;MrnE', 6),\n",
+       " (8, 'j:bm1;W', 7),\n",
+       " (9, '![Zm}FR', 7),\n",
+       " (10, 'p5\"olmd', 7)]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,37 +189,37 @@
    "source": [
     "## De volgende generaties\n",
     "\n",
-    "Klik op play om nieuwe generatie te berekenen. "
+    "Klik op play om nieuwe generatie te berekenen. Ieder generatie is net iets beter."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generatie: 26\n"
+      "Generatie: 4\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[('Syntra!', 0),\n",
-       " ('Syntra!', 0),\n",
-       " ('Syntra!', 0),\n",
-       " ('Syntra!', 0),\n",
-       " ('SEntra!', 1),\n",
-       " ('Spntra!', 1),\n",
-       " ('SEntra!', 1),\n",
-       " ('SEntra!', 1),\n",
-       " ('Spntra!', 1),\n",
-       " ('SEntra!', 1)]"
+       "[(1, '!i_tra:', 4),\n",
+       " (2, 'SLvtjb!', 4),\n",
+       " (3, 'llltra.', 4),\n",
+       " (4, '@fAcra!', 4),\n",
+       " (5, '1pAtrC!', 4),\n",
+       " (6, 'fJPt5a!', 4),\n",
+       " (7, ' J)tO-!', 5),\n",
+       " (8, 'SEAt-F/', 5),\n",
+       " (9, '1p:trp.', 5),\n",
+       " (10, 'Sf:_rCE', 5)]"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +246,7 @@
     "\n",
     "population = sorted(population, key = lambda x:x.fitness)\n",
     "print(f\"Generatie: {generation}\")\n",
-    "[(\"\".join(individu.chromosome), individu.fitness) for individu in population][:10]   "
+    "[(i+1, \"\".join(individu.chromosome), individu.fitness) for (i, individu) in enumerate(population)][:10]   "
    ]
   }
  ],
