modified:   syntr-presentatie.ipynb 	modified:   tutorial-of-genetic-algorithm.ipynb

--- a/tutorial-of-genetic-algorithm.ipynb
+++ b/tutorial-of-genetic-algorithm.ipynb
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "b15fb890",
    "metadata": {
     "execution": {
@@ -350,7 +350,7 @@
     "QRSTUVWXYZ 1234567890, .-;:_!\"#%&/()=?@${[]}'''\n",
     "\n",
     "# Target string to be generated\n",
-    "TARGET = \"Kaggle!\"\n",
+    "TARGET = \"Syntra!\"\n",
     "\n",
     "class Individual(object):\n",
     "\t'''\n",
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "b4ab0301",
    "metadata": {},
    "outputs": [],
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "aabb473a",
    "metadata": {},
    "outputs": [
@@ -493,20 +493,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generation: 1\tString: c2Y1=F!\tFitness: 6\n",
-      "Generation: 2\tString: ;agGO?H\tFitness: 5\n",
-      "Generation: 3\tString: ;agGO?H\tFitness: 5\n",
-      "Generation: 4\tString: -%gz4e!\tFitness: 4\n",
-      "Generation: 5\tString: Kagzd)!\tFitness: 3\n",
-      "Generation: 6\tString: Kag,.e!\tFitness: 2\n",
-      "Generation: 7\tString: Kag,.e!\tFitness: 2\n",
-      "Generation: 8\tString: Kag,.e!\tFitness: 2\n",
-      "Generation: 9\tString: Kag,.e!\tFitness: 2\n",
-      "Generation: 10\tString: Kagg.e!\tFitness: 1\n",
-      "Generation: 11\tString: Kagg.e!\tFitness: 1\n",
-      "Generation: 12\tString: Kagg.e!\tFitness: 1\n",
-      "Generation: 13\tString: Kagg.e!\tFitness: 1\n",
-      "Generation: 14\tString: Kaggle!\tFitness: 0\n"
+      "Generation: 1\tString: Su0no.E\tFitness: 6\n",
+      "Generation: 2\tString: Su0no.E\tFitness: 6\n",
+      "Generation: 3\tString: J&nusa7\tFitness: 5\n",
+      "Generation: 4\tString: J&nusa7\tFitness: 5\n",
+      "Generation: 5\tString: Sen[oZ!\tFitness: 4\n",
+      "Generation: 6\tString: Sen[oZ!\tFitness: 4\n",
+      "Generation: 7\tString: SynO a!\tFitness: 2\n",
+      "Generation: 8\tString: SynO a!\tFitness: 2\n",
+      "Generation: 9\tString: SynO a!\tFitness: 2\n",
+      "Generation: 10\tString: SynO a!\tFitness: 2\n",
+      "Generation: 11\tString: SynO a!\tFitness: 2\n",
+      "Generation: 12\tString: SynO a!\tFitness: 2\n",
+      "Generation: 13\tString: SynO a!\tFitness: 2\n",
+      "Generation: 14\tString: SynO a!\tFitness: 2\n",
+      "Generation: 15\tString: SynO a!\tFitness: 2\n",
+      "Generation: 16\tString: SynO a!\tFitness: 2\n",
+      "Generation: 17\tString: SynO a!\tFitness: 2\n",
+      "Generation: 18\tString: SynO a!\tFitness: 2\n",
+      "Generation: 19\tString: Synt a!\tFitness: 1\n",
+      "Generation: 20\tString: Synt a!\tFitness: 1\n",
+      "Generation: 21\tString: Synt a!\tFitness: 1\n",
+      "Generation: 22\tString: Synt a!\tFitness: 1\n",
+      "Generation: 23\tString: Synt a!\tFitness: 1\n",
+      "Generation: 24\tString: Synt a!\tFitness: 1\n",
+      "Generation: 25\tString: Synt a!\tFitness: 1\n",
+      "Generation: 26\tString: Synt a!\tFitness: 1\n",
+      "Generation: 27\tString: Synt a!\tFitness: 1\n",
+      "Generation: 28\tString: Synt a!\tFitness: 1\n",
+      "Generation: 29\tString: Synt a!\tFitness: 1\n",
+      "Generation: 30\tString: Synt a!\tFitness: 1\n",
+      "Generation: 31\tString: Syntra!\tFitness: 0\n"
      ]
     }
    ],
